--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0"
     //view model and activity.. use i.e by viewModels<ViewModelClass>()
     implementation "androidx.activity:activity-ktx:1.2.0"
+
+    // remember to add fragment library if you want to add fragments in Kotlin project
+    implementation "androidx.fragment:fragment-ktx:1.3.0"
+
+    //An image loading library for Android backed by Kotlin Coroutines
+    implementation 'io.coil-kt:coil:0.13.0'
 }
