--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,12 @@ dependencies {
     // Kotlin
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    //jetpack datastore
+    implementation 'androidx.datastore:datastore-preferences:1.0.0'
+
+    //Room database
+    def room_version = "2.3.0"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
